--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "coursetro-eth",
+  "name": "loginapp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple authentication system",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Brad Traversy",
   "license": "ISC",
   "dependencies": {
-    "web3": "github:ethereum/web3.js"
-  },
-  "devDependencies": {
-    "lite-server": "^2.3.0"
+    "bcryptjs": "*",
+    "body-parser": "*",
+    "connect-flash": "*",
+    "cookie-parser": "^1.4.1",
+    "express": "*",
+    "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*"
   }
 }
