--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "loginapp",
+  "name": "Voteup",
   "version": "1.0.0",
-  "description": "Simple authentication system",
+  "description": "Voting System using blockchain",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Brad Traversy",
+  "author": "Yash Puthran",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "*",
